update formation